force-app/main/default/objects/Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City address</description>
    <inlineHelpText>City address</inlineHelpText>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>