force-app/main/default/objects/Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State located</description>
    <inlineHelpText>State located</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>