force-app/main/default/objects/Address_Book__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if location is verified</description>
    <inlineHelpText>Check if location is verified</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>